# func_schemas/validateSchemas.js
@@ -13,8 +13,7 @@ module.exports = {
             city: Joi.string().required(),
             country: Joi.string().trim().alphanum().required(),
             date_joined: Joi.date().format('DD-MM-YYYY').utc(),
-            active: Joi.boolean(),
-            user_role: Joi.string()
+            active: Joi.boolean()
         })
     },
     loginSchema: {
@@ -34,9 +33,7 @@ module.exports = {
             city: Joi.string(),
             country: Joi.string().trim().alphanum(),
             date_joined: Joi.date().format('YYYY-MM-DD').utc(),
-            active: Joi.boolean(),
-            user_role: Joi.string()
-
+            active: Joi.boolean()
         })
     }
 };
